classDiagram

    class Player {
        +str name
        +int current_score
        +int correct_answers
        +int total_answers
        +int fast_answers
        +int BASE_POINTS = 10
        +int MAX_SPEED_BONUS = 5
        +int FAST_ANSWER_THRESHOLD = 5
        +award_points(answer_time) int
        +record_wrong_answer()
        +accuracy() float
        +reset_score()
        +__str__() str
    }

    class QuestionDB {
        +list questions
        +str DATA_FILE
        +get_categories() list
        +get_questions(category, count) list
        +get_question_count(category) int
        +add_question(category, question, options, answer)
        -_load_questions() list
        -_save_questions()
    }

    class AccountManager {
        +dict accounts
        +str ACCOUNTS_FILE
        +register(username, password) tuple
        +login(username, password) tuple
        +get_profile(username) dict
        +update_stats(username, score)
        +add_achievement(username, achievement_id)
        +user_exists(username) bool
        -_load() dict
        -_save()
    }

    class Leaderboard {
        +list entries
        +str SCORES_FILE
        +int MAX_ENTRIES = 10
        +add_entry(name, score, category, mode)
        +display(filter_mode)
        -_load() list
        -_save()
    }

    class achievements {
        <<module>>
        +dict ACHIEVEMENTS
        +check_achievements(games_played, total_score, ...) list
        +get_all_achievements() dict
    }

    class quiz_engine {
        <<module>>
        +run_quiz(player, db, category, mode)
        +calculate_points(time) int
        +display_question(q, number, total)
    }

    class app_Flask {
        <<module>>
        +Flask app
        +GET / index()
        +GET POST /login login()
        +GET POST /register register()
        +GET /logout logout()
        +GET POST /play play()
        +GET /leaderboard leaderboard()
        +GET POST /admin admin()
        +GET /profile profile()
    }

    %% Beziehungen
    quiz_engine ..> Player           : uses
    quiz_engine ..> QuestionDB       : uses

    app_Flask   ..> Player           : uses
    app_Flask   ..> QuestionDB       : uses
    app_Flask   ..> AccountManager   : uses
    app_Flask   ..> Leaderboard      : uses
    app_Flask   ..> quiz_engine      : uses
    app_Flask   ..> achievements     : uses

    AccountManager ..> achievements  : uses
